# slack-templates

./: .dictionary.txt  .editorconfig  .flake8  .gitignore  .jscpd.json  .mega-linter.yaml  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  README.md  action.yaml  cspell.config.yaml  pyproject.toml  set_slack_message.py
.github/: renovate.json
.github/workflows/: bump-version.yaml  notify-assignee.yaml  notify-reviewers.yaml  request-review.yaml  test.yaml
src/: __init__.py  cli.py  custom_notification.py  pull_request_assignment.py  pull_request_for_base_branch_oid.graphql  reviewers_assignment.py  slack_notification.py  workflow_result.py
