[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool]
  [tool.autopep8]
  aggressive = 2
  in-place = true
  max_line_length = 88
  recursive = true

  [tool.black]
  target-version = ["py311"]

  [tool.commitizen]
  version_provider = "poetry"
  version_files = ["README.md:slack-templates@"]
  major_version_zero = true

  [tool.docformatter]
  black = true
  in-place = true
  recursive = true

  [tool.mypy]
  disallow_any_decorated = true
  disallow_any_unimported = true
  show_error_code_links = true
  show_error_context = true
  show_error_end = true
  strict = true
  pretty = true
  warn_unreachable = true

  [tool.poetry]
  name = "slack-templates"
  version = "0.6.33"
  description = "Send Informative, Concise Slack Notifications With Minimal Effort"
  authors = ["Kurt von Laven <kurt.von.laven@gmail.com>"]
  license = "MIT"

  [tool.poetry.dependencies]
  # Keep in sync with .pre-commit-config.yaml and .tool-versions.
  python = "==3.12.0"

  [tool.poetry.group.dev.dependencies]
  autopep8 = "==2.0.4"
  bandit = "==1.7.5"
  black = "==23.9.1"
  commitizen = "==3.10.0" # Keep in sync with .pre-commit-config.yaml.
  mypy = "==1.5.1"
  pre-commit = "==3.5.0"
  pycodestyle = "==2.11.0"
  pylint = "==2.17.5"
  ruff = "==0.0.291"

  [tool.pylint.messages_control]
  disable = "bad-whitespace, bad-continuation"
  max-line-length = 88

  [tool.ruff]
  select = ["ALL"]
  ignore = [
    "AIR",
    "ANN101",
    "COM",
    "CPY001",
    "D203",
    "D213",
    "DJ",
    "FA",
    "NPY",
    "PD",
    "PT",
    "Q",
    "S",
    "T20"
  ]
  target-version = "py311"

  [tool.ruff.flake8-annotations]
  mypy-init-return = true
